syntax = "proto3";

package admin.service.v1;
option go_package = "kratos-bi/gen/api/go/admin/service/v1;v1";

import "gnostic/openapi/v3/annotations.proto";
import "google/api/annotations.proto";
import "google/protobuf/empty.proto";

import "user/service/v1/user.proto";

option (gnostic.openapi.v3.document) = {
  info: {
    title: "用户后台登陆认证接口";
    description: "用户后台登陆认证";
    version: "1.0";
  }
};

// 变量的命名一律使用小驼峰命名法，例如：firstName、lastName等。

// 用户后台登陆认证服务
service AuthenticationService {
  // 后台登陆
  rpc Login (LoginRequest) returns (LoginResponse) {
    option (google.api.http) = {
      post: "/admin/v1/login"
      body: "*"
    };
  }

  // 后台登出
  rpc Logout (LogoutRequest) returns (google.protobuf.Empty) {
    option (google.api.http) = {
      post: "/admin/v1/logout"
      body: "*"
    };
  }

  // 后台获取已经登陆的用户的数据
  rpc GetMe (GetMeRequest) returns (user.service.v1.User) {
    option (google.api.http) = {
      get: "/admin/v1/me"
    };
  }
}

// 用户后台登陆 - 请求
message LoginRequest {
  optional string userName = 1;
  optional string password = 2;
}
// 用户后台登陆 - 回应
message LoginResponse {
  uint32 id = 1;
  string userName = 2;
  string token = 3;
  string refreshToken = 4;
}

// 用户后台登出 - 请求
message LogoutRequest {
  uint32 id = 1;
}

// 获取当前用户信息 - 请求
message GetMeRequest {
  uint32 id = 1;
}
